# llm-orchestration

./: .env copy.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: router.py  routes_chat.py  routes_models.py
app/core/: config.py
app/providers/: anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
app/routing/: rules.py
app/schemas/: chat.py  model.py
app/services/: orchestrator.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: BrandMark.tsx  ChatMessages.tsx  Header.tsx  ModelSelector.tsx  PromptComposer.tsx  StatusPanel.tsx
frontend/src/services/: api.ts
frontend/src/types/: chat.ts
llm_fastapi_scaffold.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/api/: test_health.py  test_model.py
