[project]
name = "llm-fastapi-scaffold"
version = "0.1.0"
description = "FastAPI scaffold for LLM gateway and model orchestration"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
